chore(clean up optifine deprecation warnings)